2024-01-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.6
        * configure.ac: Idem
        * configure: Idem

2024-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/libdieharder/bits.c: Adjust format for r-devel on	Windows
        * src/libdieharder/countx.c: Idem
        * src/libdieharder/rng_file_input.c: Idem
        * src/libdieharder/rngav.c: Idem
        * src/libdieharder/sts_monobit.c: Idem

2023-01-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.5
        * configure.ac: Idem
        * configure: Idem

	* configure.ac: Remove 'AC_PROG_CC' to appease a CRAN email
        * configure: Idem

2022-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/libdieharder/dieharder/libdieharder.h: Include <stdint.h>
	as carried over from pull request #4 in dieharder repo

2022-10-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.4
        * configure.ac: Idem
        * configure: Idem

        * src/*: Numerous changes to accomodate clang-15 -Wstrict-prototypes

2021-12-23  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Remove unused continuous integration artifact and badge

2021-12-14  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.2.3
	* configure.ac: Idem
	* configure: Idem

	* src/libdieharder/dieharder/libdieharder.h (KB): Renamed from K
	* src/libdieharder/rng_file_input.c (file_input_get): Use KB not K

	* src/libdieharder/kstest.c (p_ks_new): Allocate two vectors with
	calloc instead of malloc for side effect of zero setting

2021-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* configure.win: Based on patch by Tomas Kalibera that is part of his
	changes for the Windows utf8-enhabced ucrt3 builds of R 4.2.0

2021-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
